Compressed images to reduce load time

--- a/projects.html
+++ b/projects.html
@@ -91,7 +91,7 @@
           </div>
           <div class="row bordered">
             <div class="col-md-4">
-              <img class="card-img-top image-thumbnail" src="https://metalabharvard.github.io/assets/projects/bookanook/bookanook.jpg" alt="Card image cap">
+              <img class="card-img-top image-thumbnail" src="projects/bookanook.jpg" alt="Card image cap">
             </div>
             <div class="col-md-8">
               <div class="card-body">
