--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
               <li class="nav-item">
                 <a class="nav-link" href="reading_list.html">Reading List</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" target="_blank" href="https://codacode.wordpress.com/">Blog</a>
+              </li>
             </ul>
-          </nav> 
+          </nav>
         </div>
       </div>
     </div>
