--- a/reading_list.html
+++ b/reading_list.html
@@ -36,6 +36,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="reading_list.html">Reading List</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" target="_blank" href="https://codacode.wordpress.com/">Blog</a>
+              </li>
             </ul>
           </nav> 
         </div>
@@ -47,21 +50,27 @@
         <div class="col-md-8">
           <div class="card-columns">
             <div class="card">
+              <a href="https://www.amazon.in/Outliers-Story-Success-Malcolm-Gladwell/dp/0141036257/ref=as_li_ss_il?ie=UTF8&qid=1517339371&sr=8-1&keywords=outliers&linkCode=li3&tag=shubhpatel048-21&linkId=ca17149b8217ecd1e113634869f42e22" target="_blank"><img border="0" src="https://ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=0141036257&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=shubhpatel048-21" ></a>
+              <div class="card-body bg-light">
+                <p class="card-title">Outliers</p>
+              </div>
+            </div>
+            <div class="card">
               <a href="https://www.amazon.in/Monk-Who-Sold-His-Ferrari/dp/817992162X/ref=as_li_ss_il?pd_rd_wg=Kfjkh&pd_rd_r=cedecb4e-025a-440d-b3e9-edf238625901&pd_rd_w=vgk05&ref_=pd_gw_simh&pf_rd_r=M07JY3RCKMW6TC3VJ50K&pf_rd_p=c2ebdb65-3bcd-59df-a62a-6b0e925df1af&linkCode=li3&tag=shubhpatel108-website-21&linkId=d11e7de50e9a2a388d71e37322897c98" target="_blank"><img border="0" src="https://ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=817992162X&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=shubhpatel108-website-21" ></a>
               <div class="card-body bg-light">
                 <p class="card-title">The Monk who sold his Ferrari</p>
               </div>
             </div>
             <div class="card">
-              <a href="https://www.amazon.in/Secret-Rhonda-Byrne/dp/1847370292/ref=as_li_ss_il?s=books&ie=UTF8&qid=1513963256&sr=1-1&keywords=the+secret+rhonda+byrne&linkCode=li3&tag=shubhpatel108-website-21&linkId=c78262715ef62ccf8dd0ef273d16b253" target="_blank"><img border="0" src="https://ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=1847370292&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=shubhpatel108-website-21" ></a>
+              <a href="https://www.amazon.in/Winner-Stands-Alone-Paulo-Coelho/dp/0007318685/ref=as_li_ss_il?ie=UTF8&qid=1517339532&sr=8-1&keywords=winners+stand+alone+by+paulo+coelho&linkCode=li3&tag=shubhpatel048-21&linkId=5d578a166735803165f4f3d2d48d416d" target="_blank"><img border="0" src="https://ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=0007318685&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=shubhpatel048-21" ></a>
               <div class="card-body bg-light">
-                <p class="card-title">The Secret</p>
+                <p class="card-title">The Winner stands alone</p>
               </div>
             </div>
             <div class="card">
-              <a href="https://www.amazon.in/Google-Works-Rosenberg-Jonathan-Schmidt/dp/1444792490/ref=as_li_ss_il?s=books&ie=UTF8&qid=1513963298&sr=1-1&keywords=how+google+works&linkCode=li3&tag=shubhpatel108-website-21&linkId=b17a3985448b36cdeccd66577cd0a228" target="_blank"><img border="0" src="https://ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=1444792490&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=shubhpatel108-website-21" ></a>
+              <a href="https://www.amazon.in/Secret-Rhonda-Byrne/dp/1847370292/ref=as_li_ss_il?s=books&ie=UTF8&qid=1513963256&sr=1-1&keywords=the+secret+rhonda+byrne&linkCode=li3&tag=shubhpatel108-website-21&linkId=c78262715ef62ccf8dd0ef273d16b253" target="_blank"><img border="0" src="https://ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=1847370292&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=shubhpatel108-website-21" ></a>
               <div class="card-body bg-light">
-                <p class="card-title">How Google Works</p>
+                <p class="card-title">The Secret</p>
               </div>
             </div>
             <div class="card">
@@ -81,9 +90,21 @@
               </blockquote>
             </div>
             <div class="card">
+              <a href="https://www.amazon.in/Google-Works-Rosenberg-Jonathan-Schmidt/dp/1444792490/ref=as_li_ss_il?s=books&ie=UTF8&qid=1513963298&sr=1-1&keywords=how+google+works&linkCode=li3&tag=shubhpatel108-website-21&linkId=b17a3985448b36cdeccd66577cd0a228" target="_blank"><img border="0" src="https://ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=1444792490&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=shubhpatel108-website-21" ></a>
+              <div class="card-body bg-light">
+                <p class="card-title">How Google Works</p>
+              </div>
+            </div>
+            <div class="card">
               <a href="https://www.amazon.in/Alchemist-Paulo-Coelho/dp/8172234988/ref=as_li_ss_il?s=books&ie=UTF8&qid=1513963470&sr=1-1&keywords=the+alchemist&linkCode=li3&tag=shubhpatel108-website-21&linkId=f5aa8c1c15ca0d51344159309d544422" target="_blank"><img border="0" src="https://ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=8172234988&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=shubhpatel108-website-21" ></a>
               <div class="card-body bg-light">
                 <p class="card-title">The Alchemist</p>
+              </div>
+            </div>
+            <div class="card">
+              <a href="https://www.amazon.in/Superintelligence-Dangers-Strategies-Nick-Bostrom/dp/0198739834/ref=as_li_ss_il?s=books&ie=UTF8&qid=1517340250&sr=1-1&keywords=superintelligence&linkCode=li3&tag=shubhpatel048-21&linkId=3898cdbaf41de695eae889f617f224fb" target="_blank"><img border="0" src="https://ws-in.amazon-adsystem.com/widgets/q?_encoding=UTF8&ASIN=0198739834&Format=_SL250_&ID=AsinImage&MarketPlace=IN&ServiceVersion=20070822&WS=1&tag=shubhpatel048-21" ></a>
+              <div class="card-body bg-light">
+                <p class="card-title">Superintelligence: Paths, Dangers, Strategies</p>
               </div>
             </div>
             <div class="card">
