Added icon for resume link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,10 @@
               Shubham Patel
             </div>
             <div class="row justify-content-md-center">
-              <a class="resume-link" target="_blank" href="ShubhamPatel_Resume.pdf">Resume</a>
+              <a class="resume-link" target="_blank" href="ShubhamPatel_Resume.pdf">
+                <i class="fa fa-download" aria-hidden="true"></i>
+                Resume
+              </a>
             </div>
             <div class="row justify-content-md-center">
               <a class="resume-link" href="mailto:shubhpatel108@gmail.com">shubhpatel108@gmail.com</a>
