--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
                 <a class="profile-link mx-2" target="_blank" href="https://twitter.com/shubhpatel108">
                   <i class="fa fa-twitter" aria-hidden="true"></i>
                 </a>
+                <a class="profile-link mx-2" target="_blank" href="https://instagram.com/shubhpatel108">
+                  <i class="fa fa-instagram" aria-hidden="true"></i>
+                </a>
                 <a class="profile-link mx-2" target="_blank" href="https://www.youtube.com/channel/UC2Bts3E1A5ww4CsJzrksQtg">
                   <i class="fa fa-youtube-play" aria-hidden="true"></i>
                 </a>
