--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <a class="profile-link mx-2" target="_blank" href="https://www.facebook.com/108shubhpatel">
                   <i class="fa fa-facebook-official" aria-hidden="true"></i>
                 </a>
-                <a class="profile-link mx-2" target="_blank" href="https://in.linkedin.com/pub/shubham-patel/55/a11/425">
+                <a class="profile-link mx-2" target="_blank" href="https://www.linkedin.com/in/shubhpatel108/">
                   <i class="fa fa-linkedin" aria-hidden="true"></i>
                 </a>
                 <a class="profile-link mx-2" target="_blank" href="https://twitter.com/shubhpatel108">
@@ -82,6 +82,55 @@
                 <a class="profile-link mx-2" target="_blank" href="https://www.youtube.com/channel/UC2Bts3E1A5ww4CsJzrksQtg">
                   <i class="fa fa-youtube-play" aria-hidden="true"></i>
                 </a>
+              </div>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">Industry</h4>
+              <div class="row">
+                <div class="col-md-3 resume-card">
+                  <span class="position">Software Engineer</span>
+                  <div class="image-wrapper">
+                    <a target="_blank" href="https://www.apple.com/">
+                      <img style="width:156px" src="logos/apple.png">
+                    </a>
+                  </div>
+                  <span class="company">Apple</span>
+                  <span class="duration">Oct 2022 - Present</span>
+                </div>
+                <div class="col-md-3 resume-card">
+                  <span class="position">Software Engineer</span>
+                  <div class="image-wrapper">
+                    <a target="_blank" href="https://www.amazon.com/">
+                      <img style="width:156px" src="logos/amazon.png">
+                    </a>
+                  </div>
+                  <span class="company">Amazon</span>
+                  <span class="duration">Aug 2016 - Oct 2022</span>
+                </div>
+                <div class="col-md-3 resume-card">
+                  <span class="position">Software Engineer Intern</span>
+                  <div class="image-wrapper">
+                    <a target="_blank" href="https://www.practo.com/">
+                      <img style="width:156px" src="logos/practo.jpg">
+                    </a>
+                  </div>
+                  <span class="company">Practo</span>
+                  <span class="place">Bengaluru, India</span>
+                  <span class="duration">Jan - April 2016</span>
+                </div>
+                <div class="col-md-3 resume-card">
+                  <span class="position">Tech Lead</span>
+                  <div class="image-wrapper">
+                    <a target="_blank" href="https://thecollegestore.in/">
+                      <img style="width:70px" src="logos/tcs.png">
+                    </a>
+                  </div>
+                  <span class="company">TheCollegeStore</span>
+                  <span class="place">Gandhinagar, India</span>
+                  <span class="duration">2016</span>
+                </div>
               </div>
             </div>
           </div>
@@ -110,46 +159,6 @@
                   <span class="company">SGVP International School</span>
                   <span class="place">Ahmedabad, India</span>
                   <span class="duration">2004 - 2012</span>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-body">
-              <h4 class="card-title">Industry</h4>
-              <div class="row">
-                <div class="col-md-3 resume-card">
-                  <span class="position">Software Engineer</span>
-                  <div class="image-wrapper">
-                    <a target="_blank" href="https://www.amazon.com/">
-                      <img style="width:156px" src="logos/amazon.png">
-                    </a>
-                  </div>
-                  <span class="company">Amazon</span>
-                  <span class="place">Bengaluru, India</span>
-                  <span class="duration">Aug 2016 - Present</span>
-                </div>
-                <div class="col-md-3 resume-card">
-                  <span class="position">Software Engineer Intern</span>
-                  <div class="image-wrapper">
-                    <a target="_blank" href="https://www.practo.com/">
-                      <img style="width:156px" src="logos/practo.jpg">
-                    </a>
-                  </div>
-                  <span class="company">Practo</span>
-                  <span class="place">Bengaluru, India</span>
-                  <span class="duration">Jan - April 2016</span>
-                </div>
-                <div class="col-md-3 resume-card">
-                  <span class="position">Tech Lead</span>
-                  <div class="image-wrapper">
-                    <a target="_blank" href="https://thecollegestore.in/">
-                      <img style="width:70px" src="logos/tcs.png">
-                    </a>
-                  </div>
-                  <span class="company">TheCollegeStore</span>
-                  <span class="place">Gandhinagar, India</span>
-                  <span class="duration">2016</span>
                 </div>
               </div>
             </div>
