--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
               <h4 class="card-title">Industry</h4>
               <div class="row">
                 <div class="col-md-3 resume-card">
-                  <span class="position">Software Engineer</span>
+                  <span class="position">Senior Software Engineer</span>
                   <div class="image-wrapper">
                     <a target="_blank" href="https://www.apple.com/">
                       <img style="width:82px" src="logos/apple.png">
